--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,10 +1,15 @@
-<p style="color: green"><%= notice %></p>
+<div class="container">
+  <p style="color: green"><%= notice %></p>
 
-<%= render @recipe %>
+  <%= render @recipe %>
 
-<div>
-  <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %> |
-  <%= link_to "Back to recipes", recipes_path %>
-
-  <%= button_to "Destroy this recipe", @recipe, method: :delete %>
-</div>
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <%= link_to "< Back to recipes", recipes_path %> |
+      <%= link_to "Edit this recipe", edit_recipe_path(@recipe) %>      
+    </div>
+    <div class="col-12 col-md-6 text-end">
+      <%= button_to "Delete", @recipe, method: :delete, class: 'btn btn-danger text-light' %>
+    </div>
+  </div>
+</div>  
