--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,21 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 $padding: 10px;
-$user-image-size: 80px;
+$image-circle-size: 100px;
 $transition: 0.5s;
 
 //Colors
 $color-background: white;
+$danger: #fd3654;
 $primary: #129575;
+$silver: #d9dadb;
+
+html {
+  font-size: 16px;
+}
 
 body {
   background-color: $color-background !important;
+  font-family: 'Poppins', sans-serif;
+}
+
+a {
+  text-decoration: none !important;
+
+  &:hover {
+    text-decoration: underline !important;
+  }
 }
 
 h1 {
-  font-family: 'Poppins', sans-serif;
   font-weight: bold !important;
+  font-size: 1.5rem !important;
 }
 
+.btn-href {
+  text-decoration: none !important;
+
+  &:hover {
+    text-decoration: none !important;
+  }
+}
+
+.col-action {
+  width: 120px;
+}
+
+.highlight {
+  align-items: flex-end;
+  border-bottom: 1px solid darken($silver, 10%);
+  color: dimgrey;
+  display: flex;
+  justify-content: space-between;  
+  font-weight: bold;
+  margin-bottom: $padding/2;
+  padding: $padding/2 0;
+  
+  p {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.image-link {
+  border: solid $silver 2px;
+
+  &:hover {
+    border-color: $primary;
+  }
+}
+
+.image-circle {
+  border: $silver solid 2px;
+  border-radius: $image-circle-size/2;
+  height: $image-circle-size;
+  transition: $transition;
+  width: $image-circle-size;
+}
+
+.card-image {
+  margin-bottom: $padding*2;
+  margin-top: $image-circle-size/2;
+  padding-top: $image-circle-size/2;
+
+  h5 {
+    font-weight: 500;
+    font-size: 1.1rem;
+  }
+
+  .icon-link {
+    align-items: center;
+    background: white;
+    border-radius: 100%;
+    color: darken($silver, 33%);
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    text-decoration: none;
+    width: 32px;
+
+    &:hover {
+      text-decoration: none;
+      color: $primary;
+    }
+  }
+}
+
+.icon-time {
+  height: 48px;
+  width: 48px;
+}
+
+@media only screen and (min-width: 768px) {
+  .icon-time {
+    height: 64px;
+    width: 64px;
+  }
+}
 
 @import "bootstrap";
