--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with(model: recipe) do |form| %>
+  <%= form.hidden_field :user_id, value: 1 %>
+
   <% if recipe.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
@@ -11,37 +13,41 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+  <div class="row">
+    <div class="col-12 mb-3">
+      <%= form.label :name, class: 'form-label' %>
+      <%= form.text_field :name, class: 'form-control', placeholder: 'Enter a food', required: true %>
+    </div>
 
-  <div>
-    <%= form.label :preparation_time, style: "display: block" %>
-    <%= form.number_field :preparation_time %>
-  </div>
+    <div class="col-12 col-md-6 mb-3">
+      <%= form.label :preparation_time, class: 'form-label' %>
+      <%= form.number_field :preparation_time, class: 'form-control' %>
+    </div>
 
-  <div>
-    <%= form.label :cooking_time, style: "display: block" %>
-    <%= form.number_field :cooking_time %>
-  </div>
+    <div class="col-12 col-md-6 mb-3">
+      <%= form.label :cooking_time, class: 'form-label' %>
+      <%= form.number_field :cooking_time, class: 'form-control' %>
+    </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
+    <div class="col-12 mb-3">
+      <%= form.label :description, class: 'form-label' %>
+      <%= form.text_area :description, class: 'form-control' %>
+    </div>
 
-  <div>
-    <%= form.label :public, style: "display: block" %>
-    <%= form.check_box :public %>
-  </div>
+    <div class="col-12 mb-3">
+      <div class="form-check">
+        <%= form.check_box :public, class: 'form-check-input' %>
+        <%= form.label :public, class: 'form-check-label' %>        
+      </div>      
+    </div>
 
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
+    <div class="col-12 mb-3">
+      <%= form.label :photo, class: 'form-label' %>
+      <%= form.text_field :photo, class: 'form-control', placeholder: 'Enter a url' %>
+    </div>    
 
-  <div>
-    <%= form.submit %>
+    <div class="col-12 mt-3 text-end">
+      <%= form.submit 'Save', class: 'btn btn-primary text-light ms-3' %>
+    </div>
   </div>
 <% end %>
