--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,9 +1,7 @@
-<h1>New food</h1>
-
-<%= render "form", food: @food %>
-
-<br>
-
-<div>
-  <%= link_to "Back to foods", foods_path %>
-</div>
+<div class="container">
+  <h1>New food</h1>
+  <%= render "form", food: @food %>
+  <div>
+    <%= link_to "< Back to foods", foods_path %>
+  </div>
+</div>  
