--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-12 mb-3">
       <%= form.label :name, class: 'form-label' %>
-      <%= form.text_field :name, class: 'form-control', placeholder: 'Enter a food', required: true %>
+      <%= form.text_field :name, class: 'form-control', placeholder: 'Enter a recipe name', required: true %>
     </div>
 
     <div class="col-12 col-md-6 mb-3">
