--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,22 @@
             <li class="nav-item">
               <%= link_to 'Recipes', recipes_url, class: 'nav-link' %>
             </li>
-            <li class="nav-item">
-              <%= link_to 'Log in', '#', class: 'nav-link' %>
-            </li>
+            <% if user_signed_in? %>
+              <li class="nav-item">
+               <%= link_to 'Sign Out' ,destroy_user_session_path, data: { turbo_method: :delete } , class: 'nav-link', method: :delete %>              
+              </li>
+              <li class="nav-item">
+                <%= link_to current_user.name, foods_url, class: 'nav-link'%>            
+              </li>
+            <%else%>
+              <li class="nav-item">
+                <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+              </li>
+            <%end %>
+            
           </ul>
         </div>
       </div>
