finish the functionality of recipes and foods

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -17,9 +17,9 @@
         <thead>
           <tr>
             <th scope="col" class="text-center">Food</th>
-            <th scope="col" class="text-center">Quantity</th>
-            <th scope="col" class="text-center col-action">Value</th>
-            <th scope="col" class="text-center col-action">Actions</th>
+            <th scope="col" class="text-center wd-120">Quantity</th>
+            <th scope="col" class="text-center wd-120">Value</th>
+            <th scope="col" class="text-center wd-120">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -27,13 +27,12 @@
           <% @foods.each do |food| %>
             <tr>
               <td><%=food.name %></td>
-              <td class="text-center"><%= "#{food.quantity} #{food.measure_unit}" %></td>
-              <td class="text-end col-action"><%=number_to_currency(food.price, :unit => "$") %></td>
-              <td class="col-action display-flex">
+              <td class="text-center wd-120"><%= "#{food.quantity} #{food.measure_unit}" %></td>
+              <td class="text-end wd-120"><%=number_to_currency(food.price, :unit => "$") %></td>
+              <td class="display-flex wd-120">
                 <%= link_to edit_food_path(food), class: 'btn btn-sm btn-secondary', role: 'button' do %>
                   <i class="fas fa-pen" title="Edit"></i>
                 <% end %>
-
                 <%= button_to food_path(food), { method: :delete, data: { turbo: false }, class: 'btn btn-sm btn-danger text-light ms-2'} do %>
                   <i class="fas fa-trash-alt" title="Delete"></i>
                 <% end %>                
