--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,5 +1,4 @@
 <%= form_with(model: food) do |form| %>
-  <%= form.hidden_field :user_id, value: 1 %>
   <% grouped_options = [
     [
       'Liquids',
@@ -62,14 +61,15 @@
     </div>
 
     <div class="col-12 col-md-3 mb-3">
-      <%= form.label :quantity, class: 'form-label' %>
-      <%= form.text_field :quantity, class: 'form-control', pattern: '[0-9.]+', required: true %>
+      <%= form.label :price, class: 'form-label' %>
+      <%= form.text_field :price, class: 'form-control', pattern: '[0-9.]+', required: true %>
+      <span class="comment">Price for unit</span>
     </div>    
 
     <div class="col-12 col-md-3 mb-3">
-      <%= form.label :price, class: 'form-label' %>
-      <%= form.text_field :price, class: 'form-control', pattern: '[0-9.]+', required: true %>
-    </div>
+      <%= form.label :quantity, class: 'form-label' %>
+      <%= form.text_field :quantity, class: 'form-control', pattern: '[0-9.]+', required: true %>
+    </div>    
 
     <div class='col-12 mt-3 text-end'>
       <%= form.submit 'Save', class: 'btn btn-primary text-light ms-3' %>
