--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,14 @@
             <li class="nav-item">
               <%= link_to 'Recipes', recipes_url, class: 'nav-link' %>
             </li>
+            <li class="nav-item mt-2 px-4">
+            |
+            </li>
             <% if user_signed_in? %>
-              <li class="nav-item">
-               <%= link_to 'Sign Out' ,destroy_user_session_path, data: { turbo_method: :delete } , class: 'nav-link', method: :delete %>              
+              <li class="nav-item d-flex align-items-center">
+               <%= link_to current_user.name+ ' (Sign out)' ,destroy_user_session_path, data: { turbo_method: :delete }, class: 'nav-link', method: :delete %>              
               </li>
-              <li class="nav-item">
-                <%= link_to current_user.name, foods_url, class: 'nav-link'%>            
-              </li>
+              
             <%else%>
               <li class="nav-item">
                 <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
