--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -38,12 +38,12 @@
                   <i class="fas fa-eye" title="Edit"></i>
                 <% end %>
               <%end%>
-              <%if can? :manage, food%>
+              <%if can? :edit, food%>
                 <%= link_to edit_food_path(food), class: 'btn btn-sm btn-secondary ms-2', role: 'button' do %>
                   <i class="fas fa-pen" title="Edit"></i>
                 <% end %>
               <%end%>
-              <%if can? :manage, food%>
+              <%if can? :destroy, food%>
                 <%= button_to food_path(food), { method: :delete, data: { turbo: false }, class: 'btn btn-sm btn-danger text-light ms-2'} do %>
                   <i class="fas fa-trash-alt" title="Delete"></i>
                 <% end %>  
