--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <%= link_to 'Recipes', recipes_url, class: 'nav-link' %>
             </li>
+            <li class="nav-item">
+              <%= link_to 'Public Recipes', public_recipes_path, class: 'nav-link' %>
+            </li>
             <li class="nav-item mt-2 px-4">
             |
             </li>
