--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -42,6 +42,7 @@
     <div class="col-12 mb-3">
       <%= form.label :photo, class: 'form-label' %>
       <%= form.text_field :photo, class: 'form-control', placeholder: 'Enter a url' %>
+      <span class="comment">The URL of the photo must be a valid address</span>
     </div>    
 
     <div class="col-12 mt-3 text-end">
