--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -29,7 +29,7 @@
               <div>
                 <p class="text-start m-0 p-0 text-secondary">Time</p>
                 <p class="text-start fw-bold m-0 p-0">
-                  <%=recipe.cooking_time %>
+                  <%=recipe.cooking_time + recipe.preparation_time %>
                 </p>              
               </div>
               <%if can? :destroy, recipe%>
