Update nav bar for signed in user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,11 @@
             <li class="nav-item">
               <%= link_to 'Recipes', public_recipes_path, class: 'nav-link' %>
             </li>
-            
-            <li class="nav-item">
-              <%= link_to 'My Recipes', recipes_url, class: 'nav-link' %>
-            </li>
+            <%if user_signed_in?%>
+              <li class="nav-item">
+                <%= link_to 'My Recipes', recipes_url, class: 'nav-link' %>
+              </li>
+            <%end%>
             <li class="nav-item">
               <%= link_to 'Foods', foods_url, class: 'nav-link' %>
             </li>
