--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -26,7 +26,7 @@
           </tr>
         </thead>
         <tbody>
-
+<% if @foods.length.positive? %>
           <% @foods.each do |food| %>
             <tr>
               <td><%=food.name %></td>
@@ -50,7 +50,12 @@
               <%end%>
               </td>
             </tr>
-          <% end %>              
+          <% end %>
+<% else %>
+          <tr>
+            <td colspan="4" class="col-12 text-center text-secondary py-5"><%=msj_empty %></td>
+          </tr>
+<% end %>          
         </tbody>
       </table>
     </div>
