--- a/app/views/recipes/public.html.erb
+++ b/app/views/recipes/public.html.erb
@@ -13,34 +13,40 @@
   </div>
 
   <div class="row">
-    <% @recipes.each do |recipe| %>
-      <div class="col-6 col-md-4 col-lg-3">
-        <div class="card bg-light card-image">
-          <div class="image-circle position-absolute top-0 start-50 translate-middle" style="background-image: url('<%= show_bg_image(recipe.photo) %>')">
-            <div class="image-link" onclick="location.href='<%=recipe_path(recipe) %>'">
-                <i class="fas fa-eye"></i>
-            </div>
-          </div>
-
-          <div class="card-body p-2">
-            <h5 class="card-title text-center"><%=recipe.name %></h5>
-
-            <div class="w-100 d-flex align-items-end justify-content-between">
-              <div>
-                <p class="text-start m-0 p-0 text-secondary">Time</p>
-                <p class="text-start fw-bold m-0 p-0">
-                  <%=recipe.cooking_time + recipe.preparation_time %>
-                </p>              
+    <% if @recipes.length.positive? %>
+      <% @recipes.each do |recipe| %>
+        <div class="col-6 col-md-4 col-lg-3">
+          <div class="card bg-light card-image">
+            <div class="image-circle position-absolute top-0 start-50 translate-middle" style="background-image: url('<%= show_bg_image(recipe.photo) %>')">
+              <div class="image-link" onclick="location.href='<%=recipe_path(recipe) %>'">
+                  <i class="fas fa-eye"></i>
               </div>
-              <%if can? :destroy, recipe%>
-                <%= button_to recipe_path(recipe), { method: :delete, data: { turbo: false }, class: 'btn btn-white text-danger'} do %>
-                  <i class="fas fa-trash-alt" title="Delete"></i>
-                <% end %>
-              <%end%>
+            </div>
+
+            <div class="card-body p-2">
+              <h5 class="card-title text-center"><%=recipe.name %></h5>
+
+              <div class="w-100 d-flex align-items-end justify-content-between">
+                <div>
+                  <p class="text-start m-0 p-0 text-secondary">Time</p>
+                  <p class="text-start fw-bold m-0 p-0">
+                    <%=recipe.cooking_time + recipe.preparation_time %>
+                  </p>              
+                </div>
+                <%if can? :destroy, recipe%>
+                  <%= button_to recipe_path(recipe), { method: :delete, data: { turbo: false }, class: 'btn btn-white text-danger'} do %>
+                    <i class="fas fa-trash-alt" title="Delete"></i>
+                  <% end %>
+                <%end%>
+              </div>
             </div>
           </div>
         </div>
+      <% end %>
+    <% else %>
+      <div class="col-12 text-center text-secondary my-5">
+        <%=msj_empty %>
       </div>
-    <% end %>
+    <% end %>     
   </div>
 </div>
